# anhanga

./: .gitignore  DOSSIE_FINAL_20260111_2132.md  DOSSIE_FINAL_20260111_2206.md  README.md  anhanga copy.py  anhanga.py  config.json  investigation_current.json  main.py  pyproject.toml
_deprecated_v2_backup/src/anhanga/core/: database.py
_deprecated_v2_backup/src/anhanga/modules/identity/: leaks.py
core/: config.py  orchestrator.py
modules/fincrime/: pix_decoder.py  validator.py
modules/graph/: builder.py
modules/infra/: analyzer.py  hunter.py
src/anhanga/: cli.py
src/anhanga/core/: base.py  config.py  engine.py
src/anhanga/data/: bets_db.json
src/anhanga/modules/crypto/: hunter.py  wallet_hunter.py
src/anhanga/modules/fincrime/: pix_decoder.py
src/anhanga/modules/fincrime/compliance/: validator.py
src/anhanga/modules/identity/: checker.py
src/anhanga/modules/infra/: hunter.py
src/anhanga/modules/reporter/: writer.py
tests/: manual_visual_check.py  test_engine_manual.py  test_money_trail.py  verify_compliance_full.py
